<resources>
    <string name="app_name">Mobile GUI Capstone</string>
    <string name="this_activity_will_have_a_date_picker_object">This activity will have a date picker object:</string>
    <string name="select_a_date">Select a Date:</string>
    <string name="view_image">View Image:</string>
    <string name="saved_pictures">Saved Images</string>
    <string name="hello_space">Hello Space!</string>
    <string name="hi">Hi</string>
    <string name="before_we_get_into_the_space_pictures_enter_your_name_for_a_custom_greeting">Before we get into the space pictures, enter your name for a custom greeting :)</string>
    <string name="greet_me_before_i_see_space">Greet me before I see space!</string>
    <string name="how_about_a_quick_snack_before_we_get_started">How about a quick snack before we get started?</string>
    <string name="show_me_a_picture">Show me a picture!</string>
    <string name="list_of_saved_pictures">List of Saved Pictures</string>
    <string name="title">Title:</string>
    <string name="date">Date:</string>
    <string name="image">Image</string>
    <string name="link_to_hd_image">Link to HD image:</string>
    <string name="description">Description:</string>
    <string name="list_item">Image</string>
    <string name="help">Help</string>
    <string name="list_item_text_goes_here">List item text goes here! :)</string>
    <string name="image_help">- Select a date and press the button to get the image of the day!\n
        - Click on the title (list item) to view the image and description. </string>
    <string name="image_okay">OKAY</string>
    <string name="button_text_gosearch">Image Search</string>
    <string name="main_toolbar">Main Activity</string>
    <string name="daily_image_toolbar_header">NASA Image</string>
    <string name="date_toolbar_header">Choose A Date</string>
    <string name="image_author_name">Jennifer Olenic/Ariella Burton</string>
    <string name="article_version">Version: </string>
    <string name="article_author">Authors: </string>
    <string name="button_text_nasa_image">Nasa</string>
    <string name="image_search_image">Image Search</string>
    <string name="image_saved_image">View Saved Images</string>
    <string name="image_saved_image1">View Daily Image</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="saveButton">SAVE</string>
    <string name="deleteButton">DELETE</string>
    <string name="version_num">4.1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="howtodelete">Click and hold on an image to delete it from the saved images list!</string>
    <string name="listview">ListView</string>
    <string name="image_of_the_day">Image of the Day</string>

    <string name="help_list">Click on an item to see saved image and info.  Long click to delete.</string>
    <string name="help_main">Enter your name for a custom greeting, choose show me a picture or the magnifying glass to select a date, or click the globe to see today\'s picture.</string>
    <string name="help_datepicker">Choose a date to view that picture</string>
    <string name="date_selected">Date Selected: </string>

    <string name="want_to_delete">Do you want to delete this?</string>
    <string name="delete_image_for">Delete saved image for </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="image_deleted">Image Deleted</string>
    <string name="image_saved">Image Saved: </string>
</resources>